--- a/style.css
+++ b/style.css
@@ -1,13 +1,9 @@
 body {
   margin: 0;
   padding: 0;
-}
-
-#map {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  width: 100%;
+  display: flex;
+  flex-direction: row;
+  height: 100vh;
 }
 
 p {
@@ -16,21 +12,19 @@ p {
   font-size: 13px;
 }
 
+#map {
+  top: 0;
+  bottom: 0;
+  width: calc(100% - 300px);
+}
+
+
 .layers {
-  height: 75px;
-  width: 150px;
-  position: absolute;
-  bottom: 40px;
-  left: 10px;
-  background-color: rgba(255, 255, 255, 0.9);
   padding: 15px;
   text-align: center;
-  z-index: 20;
 }
-/* #export {
-  height: 20px;
-  position: absolute;
-  background: red;
-  z-index: 20;
-  width: 100%;
-} */
+
+.data-form {
+  display: flex;
+  flex-direction: column;
+}
