--- a/style.css
+++ b/style.css
@@ -1,30 +1,45 @@
 body {
-  margin: 0;
-  padding: 0;
   display: flex;
   flex-direction: row;
   height: 100vh;
+  margin: 0;
+  padding: 0;
 }
 
 p {
   font-family: 'Open Sans';
+  font-size: 14px;
   margin: 0;
-  font-size: 13px;
 }
 
-#map {
-  top: 0;
+.map {
   bottom: 0;
+  top: 0;
   width: calc(100% - 300px);
 }
 
+.sidebar {
+  background: rgba(255, 255, 255, .5);
+  width: 300px;
+}
 
 .layers {
   padding: 15px;
   text-align: center;
 }
 
-.data-form {
-  display: flex;
-  flex-direction: column;
+.popup__title {
+  font-family: 'Open Sans';
+  font-size: 14px;
+  width: 250px;
+}
+
+.popup__notes {
+  font-family: 'Open Sans';
+  font-size: 14px;
+  width: 254px;
+}
+
+.mapboxgl-popup-content {
+  padding: 20px;
 }
