Render basic 6-tone legend

--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 body {
   display: flex;
   flex-direction: row;
+  font-family: 'Open Sans';
+  font-size: 14px;
   height: 100vh;
   margin: 0;
   padding: 0;
