--- a/style.css
+++ b/style.css
@@ -44,3 +44,13 @@ p {
 .mapboxgl-popup-content {
   padding: 20px;
 }
+
+.legend {
+  display: none;
+  padding: 15px;
+}
+
+.legend__title {
+  font-size: 16px;
+  font-weight: bolder;
+}
