--- a/style.css
+++ b/style.css
@@ -35,6 +35,12 @@ p {
   margin-top: 8px;
 }
 
+.popup__question {
+  font-family: 'Open Sans';
+  font-size: 14px;
+  width: 250px;
+}
+
 .popup__title {
   font-family: 'Open Sans';
   font-size: 14px;
