--- a/style.css
+++ b/style.css
@@ -20,6 +20,27 @@ p {
   width: calc(100% - 300px);
 }
 
+.questions {
+  background: rgba(255, 255, 255, .9);
+  display:  flex;
+  flex-direction: column;
+  font-size: 16px;
+  height: 110px;
+  justify-content: space-between;
+  padding: 10px;
+  position: absolute;
+  right: 310px;
+  top: 10px;
+  width: 300px;
+}
+
+.questions__controls {
+  display: flex;
+  flex-direction: row;
+  margin-top: 10px;
+  justify-content: space-around;
+}
+
 .sidebar {
   background: rgba(255, 255, 255, .5);
   width: 300px;
