Add legend for bike lanes, space between choropleth groups

--- a/style.css
+++ b/style.css
@@ -56,6 +56,12 @@ p {
   margin-top: 8px;
 }
 
+.layers__set {
+  padding: 0;
+  border: 0;
+  margin-bottom: 8px;
+}
+
 .popup__question {
   font-family: 'Open Sans';
   font-size: 14px;
